samples/_failures_safe/1761295842_6b05bc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_103eebca.c: In function ‘main’:
./samples/SAFE/__tmp_103eebca.c:151:9: error: expected declaration or statement at end of input
  151 |         printf("Memory allocation failed\n");
      |         ^~~~~~
./samples/SAFE/__tmp_103eebca.c:151:9: error: expected declaration or statement at end of input
